# in-n-out

./: .coderabbit.yaml  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: claude-auto-pr.yml  tests.yml
innout/: cli.py  crypto.py  drive.py  server.py  sources.py  splitter.py  uploader.py
tests/: test_crypto.py  test_drive.py  test_server.py  test_splitter.py
