[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "in-n-out"
version = "0.1.0"
description = "Encrypt, split, and upload large files/repos to a custom server"
requires-python = ">=3.10"
dependencies = [
    "cryptography>=41.0",
    "requests>=2.31",
    "tqdm>=4.66",
    "huggingface_hub>=0.20",
    "gitpython>=3.1",
]

[project.scripts]
innout = "innout.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["innout*"]
